samples/_failures_safe/1761596405_804f28_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_70f3bbf8.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_70f3bbf8.c:164:12: error: missing terminating " character
  164 |     printf("Token count: %d\n
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_70f3bbf8.c:164:5: error: expected expression at end of input
  164 |     printf("Token count: %d\n
      |     ^~~~~~
./samples/SAFE/__tmp_70f3bbf8.c:164:5: error: expected declaration or statement at end of input
